--- a/IOSSwiftDay3/Base.lproj/Main.storyboard
+++ b/IOSSwiftDay3/Base.lproj/Main.storyboard
@@ -59,14 +59,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zzq-tK-S5x">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zzq-tK-S5x">
                                 <rect key="frame" x="135" y="407" width="235" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="29O-f9-lO2">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="29O-f9-lO2">
                                 <rect key="frame" x="135" y="485" width="235" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -97,12 +97,13 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="q7Y-rB-Mcg"/>
+                    <navigationItem key="navigationItem" title="Details" id="q7Y-rB-Mcg"/>
                     <connections>
                         <outlet property="authorLabel" destination="aQM-DN-wDa" id="ooL-sk-eGM"/>
                         <outlet property="descriptionTextView" destination="8O9-dE-SI5" id="Bfp-AV-AtF"/>
                         <outlet property="myImage" destination="BfZ-2C-BUJ" id="OpX-Y8-Klk"/>
                         <outlet property="publishedAtLabel" destination="Fmd-Hg-jqo" id="mwI-4I-cHc"/>
+                        <outlet property="titleLabel" destination="zzq-tK-S5x" id="edX-nB-j0D"/>
                         <outlet property="urlLabel" destination="29O-f9-lO2" id="2Gg-ZY-J5A"/>
                     </connections>
                 </viewController>
@@ -110,17 +111,26 @@
             </objects>
             <point key="canvasLocation" x="3481.1594202898555" y="-35.491071428571423"/>
         </scene>
-        <!--View Controller-->
+        <!--Favourite-->
         <scene sceneID="juC-pJ-DDP">
             <objects>
                 <viewController id="Ky1-47-oWC" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3b7-h1-JKP">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="No favourites yet" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mTS-nb-1sW">
+                                <rect key="frame" x="62" y="251" width="309" height="45"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Qkd-OO-Di1"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="U9X-dg-xi6"/>
+                    <navigationItem key="navigationItem" title="Favourite" id="U9X-dg-xi6"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s8T-eS-uTe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -145,7 +155,7 @@
             </objects>
             <point key="canvasLocation" x="8.6956521739130448" y="33.482142857142854"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Authors-->
         <scene sceneID="1rE-ui-jys">
             <objects>
                 <collectionViewController storyboardIdentifier="CollectionViewController" id="1A1-ev-8eo" customClass="CollectionViewController" customModule="IOSSwiftDay3" customModuleProvider="target" sceneMemberID="viewController">
@@ -192,7 +202,7 @@
                             <outlet property="delegate" destination="1A1-ev-8eo" id="8Mj-M8-qLy"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="VzX-uh-H59"/>
+                    <navigationItem key="navigationItem" title="Authors" id="VzX-uh-H59"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qdI-W7-QIZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -217,11 +227,11 @@
             </objects>
             <point key="canvasLocation" x="2571.0144927536235" y="-35.491071428571423"/>
         </scene>
-        <!--Item-->
+        <!--Details-->
         <scene sceneID="OC2-wE-gEC">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="v5H-Xm-oin" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="1ZU-p2-Utt"/>
+                    <tabBarItem key="tabBarItem" title="Details" selectedImage="list.bullet.rectangle" catalog="system" id="1ZU-p2-Utt"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="rHJ-5C-wvt">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -236,11 +246,11 @@
             </objects>
             <point key="canvasLocation" x="963.76811594202911" y="-35.491071428571423"/>
         </scene>
-        <!--Item-->
+        <!--Favourites-->
         <scene sceneID="v06-dI-gw5">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fEg-02-IYk" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="o2Q-BS-TKl"/>
+                    <tabBarItem key="tabBarItem" title="Favourites" selectedImage="heart" catalog="system" id="o2Q-BS-TKl"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Tqx-Fq-1t4">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -257,6 +267,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="heart" catalog="system" width="128" height="109"/>
+        <image name="list.bullet.rectangle" catalog="system" width="128" height="93"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
